[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Slimes/SlimeOrange/SlimeOrange_00000.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PoisonSpike.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.9697
height = 7.72832

[sub_resource type="CapsuleShape2D" id=4]
radius = 29.0
height = 74.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 20.0
height = 84.0

[node name="PoisonSpike" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.49574, 1.33507 )
scale = Vector2( 0.398022, 0.388609 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
rotation = 1.5708
scale = Vector2( 6, 6 )
shape = SubResource( 3 )

[node name="SpawnOut" type="Timer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, 16 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 1, -16 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="SpawnOut" to="." method="_on_SpawnOut_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
