[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Slimes/SlimeOrange/SlimeOrange_00000.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PoisonSpike.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.44038

[sub_resource type="CircleShape2D" id=2]

[node name="PoisonSpike" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.49574, 1.33507 )
scale = Vector2( 0.398022, 0.388609 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 6, 6 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 7, 7 )
shape = SubResource( 2 )

[node name="SpawnOut" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="SpawnOut" to="." method="_on_SpawnOut_timeout"]
